Issue #1389 fix: overlay overlapping

--- a/player/public/styles/style.css
+++ b/player/public/styles/style.css
@@ -249,7 +249,7 @@ body {
     width: 35%;
     height: 100%;
     top: 0;
-    margin-left: -31%;
+    margin-left: -35%;
 }
 
 .gc-menu-cont {
@@ -332,7 +332,7 @@ body {
     float: right;
     width: 20%;
     margin-top: 6%;
-    margin-right: -11%;
+    margin-right: -24%;
 }
 
 .gc-menu a.gc-menu-btn {
